--- a/Arcona-dent/index-13.html
+++ b/Arcona-dent/index-13.html
@@ -52,59 +52,59 @@
 
 <div class="sub-menu_open">
     <div class="container_inner">
-        <a class="production_plate">
+        <a class="production_plate" href="./index-1.html">
             <div class="production_plate-img"></div>
             <p class="title">КОМПОЗИТ-ВОЛОКНО</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate" href="./index-2.html">
             <div class="production_plate-img"></div>
             <p class="title">NEXT</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate" href="./index-3.html">
             <div class="production_plate-img"></div>
             <p class="title">FLOW-COLOR</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-4.html">
             <div class="production_plate-img"></div>
             <p class="title">ETCHMASTER</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-5.html">
             <div class="production_plate-img"></div>
             <p class="title">PAROSIN</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-6.html">
             <div class="production_plate-img"></div>
             <p class="title">BOSTON</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-7.html">
             <div class="production_plate-img"></div>
             <p class="title">BOSTON</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-8.html">
             <div class="production_plate-img"></div>
             <p class="title">MASTERBOND</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-9.html">
             <div class="production_plate-img"></div>
             <p class="title">Flow-Art</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-10.html">
             <div class="production_plate-img"></div>
             <p class="title">FISSURE SEALANT</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-11.html">
             <div class="production_plate-img"></div>
             <p class="title">BOSTON GLAZE</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-12.html">
             <div class="production_plate-img"></div>
             <p class="title">COLORANT</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-13.html">
             <div class="production_plate-img"></div>
             <p class="title">Silgips</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-14.html">
             <div class="production_plate-img"></div>
             <p class="title">Muson</p>
         </a>
@@ -115,7 +115,7 @@
     </div>
 </div>
 
-<div class="static-main-img"></div>
+<div class="static-main-img static-main-img13"></div>
 
 <div class="popup-open">
     <div class="popup-body">
@@ -159,7 +159,7 @@
     <div class="product-body_inner">
         <div class="product-body_left">
             <div class="product-body_left-wrapper">
-                <div class="product-body_img"></div>
+                <div class="product-body_img product-body_img13"></div>
                 <div class="product-body_left-btn">
                     <p>Замовити персональну презентацію</p>
                 </div>
@@ -167,7 +167,7 @@
         </div>
         <div class="product-body_right">
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
-            <h3>NEXT</h3>
+            <h3>SILGIPS</h3>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
@@ -175,25 +175,22 @@
                 <p>Замовити персональну презентацію</p>
             </div>
             <p>
-                NEXT – композитний стоматологічний матеріал світлового затвердіння, призначений для одного пацієнта, для виконання всіх видів пломбувань і реконструкцій передніх і бічних зубів, тимчасових і постійних, як каріозного, так і некаріозного походження.
+                Стоматологічний силікон для виготовлення моделей зубних рядів на основі як силіконових так і альгінатних відбитків.
+Дозволяє швидко, без застосування гіпсу і пов’язаних з його підготовкою процесів, виготовити якісну і високоточну модель, за лічені хвилини прямо у кабінеті лікаря.
+            </p>
+            <p>Ідеальний матеріал для виготовлення непрямих реставрацій, таких як: адгезивні мости, шини, коронки і ендокоронки, вкладки і накладки, коронково-кореневі вкладки, вініри з композитів.</p>
+            <p>
+                У наборі 2 картриджі по 50 мл кожен, по 8 насадок для змішування і наконечників.
             </p>
 
             <div class="product-img-mob"></div>
 
-            <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
-            <div class="product-list">
-                <p>пломбування каріозних порожнин І, ІІ, ІІІ, ІV, V класу по Блеку;</p>
-                <p>шинування рухомих зубів, постійні – зовнішній або внутрішній шар;</p>
-                <p>шинування рухомих зубів, тимчасові – зовнішній шар;</p>
-                <p>для відновлення композитних та акрилових конструкцій.</p>
-            </div>
             <p class="product-less">
-                Зменшує витрати композиту! Скорочує і спрощує час маніпуляції! Доступний у блістерах 0,07г  або 0,2 г в упаковці 40 шт. і 200 шт.
             </p>
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_NEXT_Інструкція.pdf</a>
+            <a class="product-pdf">UA_Silgips_Інструкція.pdf</a>
         </div>
     </div>
 </div>
