--- a/Arcona-dent/index-14.html
+++ b/Arcona-dent/index-14.html
@@ -115,7 +115,7 @@
     </div>
 </div>
 
-<div class="static-main-img static-main-img1"></div>
+<div class="static-main-img static-main-img14"></div>
 
 <div class="popup-open">
     <div class="popup-body">
@@ -159,7 +159,7 @@
     <div class="product-body_inner">
         <div class="product-body_left">
             <div class="product-body_left-wrapper">
-                <div class="product-body_img product-body_img1"></div>
+                <div class="product-body_img product-body_img14"></div>
                 <div class="product-body_left-btn">
                     <p>Замовити персональну презентацію</p>
                 </div>
@@ -167,37 +167,39 @@
         </div>
         <div class="product-body_right">
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
-            <h3>КОМПОЗИТ-ВОЛОКНО</h3>
+            <h3>MUSON</h3>
+            <p>Шипучі водорозчинні таблетки</p>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
             <div class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
             </div>
-            <p>КОМПОЗИТ-ВОЛОКНО – стоматологічний медичний виріб, призначений для застосування у всіх композитних реконструкціях, де необхідне використання основи із стоматологічного волокна.</p>
-
-            <p>КОМПОЗИТ-ВОЛОКНО є готовим для застосування продуктом, не вимагає жодних підготовчих маніпуляцій перед використанням.</p>
-
-            <p>Медаль найвищої якості Кракдент 2019.</p>
 
             <div class="product-img-mob"></div>
 
-            <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <div class="product-list">
-                <p>опори для постійних композитних протетичних робіт, таких як коронки, ендокоронки, мости, вкладки, накладки;</p>
-                <p>шини для стабілізації зубів, тимчасові і постійні;                </p>
-                <p>ортодонтичні ретейнери;                </p>
-                <p>шини для стабілізації зубів з відновленням  одиничної відсутності.</p>
+                <p>для приготування розчину для полоскання ротової порожнини;                </p>
+                <p>зменшує ризик зараження і елімінує більшість мікроорганізмів;</p>
+                <p>натуральний м’ятний аромат;</p>
+                <p>без алкоголю;</p>
+                <p>без штучних барвників і ароматизаторів;</p>
+                <p>в упаковці 80 таблеток.</p>
             </div>
+
+            <h4>ПРИЗНАЧЕННЯ ДО ЗАСТОСУВАННЯ</h4>
+            <p>
+                Таблетки для приготування розчину для полоскання ротової порожнини підчас стоматологічних процедур. Захищають лікаря і пацієнта від ризиків, пов’язаних із перенесенням мікроорганізмів, що знаходяться у ротовій порожнині пацієнта.
+            </p>
+            <p>
+                Для досягнення найкращого результату, застосовувати при кожному полосканні під час стоматологічних процедур. Одна таблетка вистачає для приготування 200мл розчину.
+            </p>
             <p class="product-less">
-                Зменшує витрати композиту! Скорочує і спрощує час маніпуляції! Доступний у блістерах 0,07г  або 0,2 г в упаковці 40 шт. і 200 шт.
             </p>
             <h4>
                 МАТЕРІАЛИ:
             </h4>
-            <a class="product-pdf">UA_Композит-Волокно_Інструкція.pdf</a>
-            <a class="product-pdf">Композит-волокно vs стекловолокно RU.pdf</a>
-            <a class="product-pdf">Композит-волокно Клиническое применение RU.pdf</a>
+            <a class="product-pdf">UA_Muson_Інструкція.pdf</a>
         </div>
     </div>
 </div>
