--- a/Arcona-dent/index.html
+++ b/Arcona-dent/index.html
@@ -52,59 +52,59 @@
 
 <div class="sub-menu_open">
     <div class="container_inner">
-        <a class="production_plate">
+        <a class="production_plate" href="./index-1.html">
             <div class="production_plate-img"></div>
             <p class="title">КОМПОЗИТ-ВОЛОКНО</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate" href="./index-2.html">
             <div class="production_plate-img"></div>
             <p class="title">NEXT</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate" href="./index-3.html">
             <div class="production_plate-img"></div>
             <p class="title">FLOW-COLOR</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-4.html">
             <div class="production_plate-img"></div>
             <p class="title">ETCHMASTER</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-5.html">
             <div class="production_plate-img"></div>
             <p class="title">PAROSIN</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-6.html">
             <div class="production_plate-img"></div>
             <p class="title">BOSTON</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-7.html">
             <div class="production_plate-img"></div>
             <p class="title">BOSTON</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-8.html">
             <div class="production_plate-img"></div>
             <p class="title">MASTERBOND</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-9.html">
             <div class="production_plate-img"></div>
             <p class="title">Flow-Art</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-10.html">
             <div class="production_plate-img"></div>
             <p class="title">FISSURE SEALANT</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-11.html">
             <div class="production_plate-img"></div>
             <p class="title">BOSTON GLAZE</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-12.html">
             <div class="production_plate-img"></div>
             <p class="title">COLORANT</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-13.html">
             <div class="production_plate-img"></div>
             <p class="title">Silgips</p>
         </a>
-        <a class="production_plate">
+        <a class="production_plate"  href="./index-14.html">
             <div class="production_plate-img"></div>
             <p class="title">Muson</p>
         </a>
