--- a/Arcona-dent/index-11.html
+++ b/Arcona-dent/index-11.html
@@ -168,7 +168,7 @@
         <div class="product-body_right">
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
             <h3>BOSTON GLAZE</h3>
-            <p>Універсальний матеріал світлового затвердівання на базі органічних смол</p>
+            <p class="pre-text">Універсальний матеріал світлового затвердівання на базі органічних смол</p>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
