--- a/Arcona-dent/index-12.html
+++ b/Arcona-dent/index-12.html
@@ -168,7 +168,7 @@
         <div class="product-body_right">
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
             <h3>COLORANT</h3>
-            <p>Композит типу flow</p>
+            <p class="pre-text">Композит типу flow</p>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
