--- a/Arcona-dent/index-14.html
+++ b/Arcona-dent/index-14.html
@@ -168,7 +168,7 @@
         <div class="product-body_right">
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
             <h3>MUSON</h3>
-            <p>Шипучі водорозчинні таблетки</p>
+            <p class="pre-text">Шипучі водорозчинні таблетки</p>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
