--- a/Arcona-dent/index-4.html
+++ b/Arcona-dent/index-4.html
@@ -168,7 +168,7 @@
         <div class="product-body_right">
             <p class="product-body_right-top-text">Допоміжні матеріали</p>
             <h3>ETCHMASTER</h3>
-            <p>Стоматологічний травильний гель</p>
+            <p class="pre-text">Стоматологічний травильний гель</p>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
