--- a/Arcona-dent/index-5.html
+++ b/Arcona-dent/index-5.html
@@ -168,7 +168,7 @@
         <div class="product-body_right">
             <p class="product-body_right-top-text">Допоміжні матеріали</p>
             <h3>PAROSIN</h3>
-            <p>Набір для промивання ясенних кишень</p>
+            <p class="pre-text">Набір для промивання ясенних кишень</p>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
