--- a/Arcona-dent/index-7.html
+++ b/Arcona-dent/index-7.html
@@ -168,7 +168,7 @@
         <div class="product-body_right">
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
             <h3>BOSTON</h3>
-            <p>Надміцний композитний мікрогібридний матеріал світлового твердіння у блістерній упаковці, що допомагає уникнути перехресних інфекцій</p>
+            <p class="pre-text">Надміцний композитний мікрогібридний матеріал світлового твердіння у блістерній упаковці, що допомагає уникнути перехресних інфекцій</p>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
