--- a/Arcona-dent/index-8.html
+++ b/Arcona-dent/index-8.html
@@ -168,7 +168,7 @@
         <div class="product-body_right">
             <p class="product-body_right-top-text">Допоміжні матеріали</p>
             <h3>MASTERBOND</h3>
-            <p>Стоматологічна адгезивна система</p>
+            <p class="pre-text">Стоматологічна адгезивна система</p>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
