--- a/Arcona-dent/index-10.html
+++ b/Arcona-dent/index-10.html
@@ -168,7 +168,7 @@
         <div class="product-body_right">
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
             <h3>FISSURE SEALANT</h3>
-            <p>Прозорий наногібридний композит для герметизації борозд</p>
+            <p class="pre-text">Прозорий наногібридний композит для герметизації борозд</p>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
