--- a/Arcona-dent/index-3.html
+++ b/Arcona-dent/index-3.html
@@ -168,7 +168,7 @@
         <div class="product-body_right">
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
             <h3>FLOW-COLOR</h3>
-            <p>Кольоровий наногібридний композит типу FLOW</p>
+            <p class="pre-text">Кольоровий наногібридний композит типу FLOW</p>
             <div class="product-body_right-btn">
                 <p>Де придбати</p>
             </div>
