--- a/Arcona-dent/index-12.html
+++ b/Arcona-dent/index-12.html
@@ -176,13 +176,12 @@
                 <p>Замовити персональну презентацію</p>
             </div>
             <p>
-                NEXT – композитний стоматологічний матеріал світлового затвердіння, призначений для одного пацієнта, для виконання всіх видів пломбувань і реконструкцій передніх і бічних зубів, тимчасових і постійних, як каріозного, так і некаріозного походження.
             </p>
 
             <div class="product-img-mob"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
-            <p>COLORANT  використовується для місцевого збільшення інтенсивності кольору композитних протетичних робіт і композитних пломб.</p>>
+            <p>COLORANT  використовується для місцевого збільшення інтенсивності кольору композитних протетичних робіт і композитних пломб.</p>
             <h4>ДОСТУПНІ КОЛЬОРИ: </h4>
             <p>білий, ясенний, а також  A, B, C (різні ступені інтенсивності коричневого кольору).</p>
             <p class="product-less">
