--- a/Arcona-dent/index.html
+++ b/Arcona-dent/index.html
@@ -281,85 +281,85 @@
     
     <div class="container-production">
         <div class="container_inner">
-            <a class="production_plate">
+            <a class="production_plate" href="./index-1.html">
                 <div class="production_plate-img"></div>
                 <p class="title">КОМПОЗИТ-ВОЛОКНО</p>
                 <p>Стоматологічна система композит-волокно-композит</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-2.html">
                 <div class="production_plate-img"></div>
                 <p class="title">NEXT</p>
                 <p>Композитний стоматологічний матеріал світлового затвердіння</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-3.html">
                 <div class="production_plate-img"></div>
                 <p class="title">FLOW-COLOR</p>
                 <p>Кольоровий наногібридний композит типу FLOW</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-4.html">
                 <div class="production_plate-img"></div>
                 <p class="title">ETCHMASTER</p>
                 <p>Стоматологічний травильний гель</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-5.html">
                 <div class="production_plate-img"></div>
                 <p class="title">PAROSIN</p>
                 <p>Набір для промивання ясенних кишень</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-6.html">
                 <div class="production_plate-img"></div>
                 <p class="title">BOSTON</p>
                 <p>Надміцний композитний матеріал світлового твердіння</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-7.html">
                 <div class="production_plate-img"></div>
                 <p class="title">BOSTON</p>
                 <p>Надміцний композитний мікрогібридний матеріал світлового твердіння у блістерній упаковці</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-8.html">
                 <div class="production_plate-img"></div>
                 <p class="title">MASTERBOND</p>
                 <p>Стоматологічна адгезивна система</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-9.html">
                 <div class="production_plate-img"></div>
                 <p class="title">Flow-Art</p>
                 <p>Універсальний текучий композит світлового затвердіння</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-10.html">
                 <div class="production_plate-img"></div>
                 <p class="title">FISSURE SEALANT</p>
                 <p>Прозорий наногібридний композит для герметизації борозд</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-11.html">
                 <div class="production_plate-img"></div>
                 <p class="title">BOSTON GLAZE</p>
                 <p>Універсальний матеріал світлового затвердівання на базі органічних смол</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-12.html">
                 <div class="production_plate-img"></div>
                 <p class="title">COLORANT</p>
                 <p>Композит типу flow</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-13.html">
                 <div class="production_plate-img"></div>
                 <p class="title">Silgips</p>
                 <p>Стоматологічний силікон для виготовлення моделей зубних рядів</p>
                 <p class="link-more">Читати більше</p>
             </a>
-            <a class="production_plate">
+            <a class="production_plate" href="./index-14.html">
                 <div class="production_plate-img"></div>
                 <p class="title">Muson</p>
                 <p>Шипучі водорозчинні таблетки</p>
