--- a/Arcona-dent/index-12.html
+++ b/Arcona-dent/index-12.html
@@ -450,46 +450,46 @@
     
 
 
-    <div class="container-2">
-        <div class="container_inner">
-            <div class="arcona-block">
-                <div class="arcona-img"></div>
-                <p>НАША ЛОГіСТИКА</p>
+<div class="container-2">
+    <div class="container_inner">
+        <div class="arcona-block">
+            <div class="arcona-img"></div>
+            <p>НАША ЛОГіСТИКА</p>
+        </div>
+        <div class="container-2_plates">
+            <div class="container-2_plate">
+                <p class="title">Київ</p>
+                <p>Регіональний представник у Центральному регіоні.
+                    <p>тел.: (+38)050 394 06 83</p>
+                    <p>mail: xxxxxxxx@gmail.com</p>
             </div>
-            <div class="container-2_plates">
-                <div class="container-2_plate">
-                    <p class="title">Київ</p>
-                    <p>Регіональний представник у Центральному регіоні.<br>
-                        тел.: (+380)50 394 06 83<br>
-                        mail: xxxxxxxx@gmail.com</p>
-                </div>
-                <div class="container-2_plate">
-                    <p class="title">Львів</p>
-                    <p>Регіональний представник у Західному регіоні.<br>
-                        тел.: (+380)99 280 18 61<br> 
-                        mail: xxxxxxxx@gmail.com</p>
-                </div>
-                <div class="container-2_plate">
-                    <p class="title">Харків</p>
-                    <p>Регіональний представник у Північно-східному регіоні.<br>
-                        тел.: (+380)66 727 29 54<br>
-                        mail: xxxxxxxx@gmail.com</p>
-                </div>
-                <div class="container-2_plate">
-                    <p class="title">Одеса</p>
-                    <p>Регіональний представник у Південному регіоні<br> 
-                        тел.: (+380)00 000 00 00<br> 
-                        mail: xxxxxxxx@gmail.com</p>
-                </div>
-                <div class="container-2_plate">
-                    <p class="title">Дніпро</p>
-                    <p>Регіональний представник у Південно-східному регіоні<br>
-                        тел.: (+380)00 000 00 00<br> 
-                        mail: xxxxxxxx@gmail.com</p>
-                </div>
+            <div class="container-2_plate">
+                <p class="title">Львів</p>
+                <p>Регіональний представник у Західному регіоні.</p>
+                    <p>тел.: (+38)099 280 18 61</p>
+                    <p>mail: xxxxxxxx@gmail.com</p>
+            </div>
+            <div class="container-2_plate">
+                <p class="title">Харків</p>
+                <p>Регіональний представник у Північно-східному регіоні.</p>
+                    <p>тел.: (+38)066 727 29 54</p>
+                    <p>mail: xxxxxxxx@gmail.com</p>
+            </div>
+            <div class="container-2_plate">
+                <p class="title">Одеса</p>
+                <p>Регіональний представник у Південному регіоні</p> 
+                    <p>тел.: (+38)000 000 00 00</p>
+                    <p>mail: xxxxxxxx@gmail.com</p>
+            </div>
+            <div class="container-2_plate">
+                <p class="title">Дніпро</p>
+                <p>Регіональний представник у Південно-східному регіоні</p>
+                    <p>тел.: (+38)000 000 00 00</p>
+                    <p>mail: xxxxxxxx@gmail.com</p>
             </div>
         </div>
     </div>
+</div>
 
     
 
