--- a/Arcona-dent/index-1.html
+++ b/Arcona-dent/index-1.html
@@ -180,7 +180,7 @@
 
             <p>Медаль найвищої якості Кракдент 2019.</p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob1"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <div class="product-list">
