--- a/Arcona-dent/index-10.html
+++ b/Arcona-dent/index-10.html
@@ -179,7 +179,7 @@
 
             </p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob10"></div>
 
             <!-- <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4> -->
             <div class="product-list">
