--- a/Arcona-dent/index-11.html
+++ b/Arcona-dent/index-11.html
@@ -179,7 +179,7 @@
                 Збільшує блиск композитних пломб і протетичних робіт. BOSTON GLAZE може застосовуватись для композитів світлового і хімічного затвердівання після повної їх полімеризації.
             </p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob11"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <p>
