--- a/Arcona-dent/index-12.html
+++ b/Arcona-dent/index-12.html
@@ -178,7 +178,7 @@
             <p>
             </p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob12"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <p>COLORANT  використовується для місцевого збільшення інтенсивності кольору композитних протетичних робіт і композитних пломб.</p>
