--- a/Arcona-dent/index-13.html
+++ b/Arcona-dent/index-13.html
@@ -183,7 +183,7 @@
                 У наборі 2 картриджі по 50 мл кожен, по 8 насадок для змішування і наконечників.
             </p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob13"></div>
 
             <p class="product-less">
             </p>
