--- a/Arcona-dent/index-2.html
+++ b/Arcona-dent/index-2.html
@@ -178,7 +178,7 @@
                 NEXT – композитний стоматологічний матеріал світлового затвердіння, призначений для одного пацієнта, для виконання всіх видів пломбувань і реконструкцій передніх і бічних зубів, тимчасових і постійних, як каріозного, так і некаріозного походження.
             </p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob2"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <div class="product-list">
