--- a/Arcona-dent/index-3.html
+++ b/Arcona-dent/index-3.html
@@ -185,7 +185,7 @@ FLOW-COLOR повстав з думкою про наймолодших паці
             <h4>ДОСТУПНІ КОЛЬОРИ:</h4>
             <p>Білий, Жовтий, Червоний, Синій, Зелений, Помаранчевий, Рожевий, Фіолетовий, Чорний.</p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob3"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <div class="product-list">
