--- a/Arcona-dent/index-4.html
+++ b/Arcona-dent/index-4.html
@@ -182,7 +182,7 @@
                 Консистенція ETCHMASTER дозволяє швидко і повністю вимивати його з порожнини. Не змінює колір зуба.
             </p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob4"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <p>Стоматологічний травильний гель ETCHMASTER призначений для збільшення адгезії між тканинами зуба і пломбувальним  композитним матеріалом. Внаслідок дії ортофосфорної кислоти наступає розчинення мінеральних компонентів, що збільшує шороховатість поверхні зуба. </p>
