--- a/Arcona-dent/index-5.html
+++ b/Arcona-dent/index-5.html
@@ -185,7 +185,7 @@
                 Доступний у наборі 10 х 3 мл
             </p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob5"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <div class="product-list">
