--- a/Arcona-dent/index-7.html
+++ b/Arcona-dent/index-7.html
@@ -181,7 +181,7 @@
             <h4>ДОСТУПНІ КОЛЬОРИ:</h4>
             <p>A1, A2, A3, A3,5, OA2, OA3, B1, B2, C2, D2, D3, T</p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob7"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <div class="product-list">
