--- a/Arcona-dent/index-8.html
+++ b/Arcona-dent/index-8.html
@@ -179,7 +179,7 @@
                 Запевняє витривалість зв’язування на рівні 20 ± 3 MPa до емалі і 12 ± 2 MPa до дентину.
             </p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob8"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <p>Стоматологічна адгезивна система MASTERBOND застосовується для: з’єднання твердих тканин зуба з композитними пломбами, герметизації маргінальної щілини, зменшення полімеризаційної усадки, підготовки поверхні протетичних робіт перед їх цементуванням композитними цементами дуального затвердіння.</p>>
