--- a/Arcona-dent/index-9.html
+++ b/Arcona-dent/index-9.html
@@ -183,7 +183,7 @@
             <h4>ДОСТУПНІ КОЛЬОРИ:</h4>
             <p>А1, А2, А3, А3,5, ОА2</p>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob9"></div>
 
             <h4>ПОКАЗАННЯ ДО ЗАСТОСУВАННЯ</h4>
             <div class="product-list">
