--- a/Arcona-dent/index-14.html
+++ b/Arcona-dent/index-14.html
@@ -176,7 +176,7 @@
                 <p>Замовити персональну презентацію</p>
             </div>
 
-            <div class="product-img-mob"></div>
+            <div class="product-img-mob product-img-mob14"></div>
 
             <div class="product-list">
                 <p>для приготування розчину для полоскання ротової порожнини;                </p>
