--- a/Arcona-dent/index-1.html
+++ b/Arcona-dent/index-1.html
@@ -121,12 +121,8 @@
     <div class="popup-body">
 
     <div class="content-container" >
-        <form action="./send.php" method="POST">
+        <form action="./send2.php" method="POST">
             <div class="form-top">
-                <div class="inp">
-                    <p>Ім'я</p>
-                    <input id="name" name="name" type="text" required>
-                </div>
                 <div class="inp">
                     <p>Прізвище</p>
                     <input id="lastname" name="lastname" type="text" required>
@@ -139,11 +135,6 @@
                     <p>Телефон</p>
                     <input id="phone" name="phone" type="number" required>
                 </div>
-                <div class="form-text">
-                    <p>Текст повідомлення</p>
-                    <textarea id="message" name="message"rows="5" cols="40"></textarea>
-                </div>
-
             </div>
            <div class="button-container">
                 <p class="close-popup">Закрити</p>
