--- a/Arcona-dent/index.html
+++ b/Arcona-dent/index.html
@@ -147,8 +147,8 @@
             </div>
         </div>
     </div>
-    <!-- <a class="slider__control slider__control_left" href="#" role="button"></a> -->
-    <!-- <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a> -->
+    <a class="slider__control slider__control_left" href="#" role="button"></a>
+    <a class="slider__control slider__control_right slider__control_show" href="#" role="button"></a>
 </div>
 
 <!--//////////slider-->
