--- a/Arcona-dent/index-5.html
+++ b/Arcona-dent/index-5.html
@@ -471,31 +471,31 @@
                 <p class="title">Київ</p>
                 <p>Регіональний представник у Центральному регіоні.
                     <p>тел.: (+38)050 394 06 83</p>
-                    <p>mail: xxxxxxxx@gmail.com</p>
+                    <p>mail: kyivdent@alpenpharma.com</p>
             </div>
             <div class="container-2_plate">
                 <p class="title">Львів</p>
                 <p>Регіональний представник у Західному регіоні.</p>
                     <p>тел.: (+38)099 280 18 61</p>
-                    <p>mail: xxxxxxxx@gmail.com</p>
+                    <p>mail: lvivdent@alpenpharma.com</p>
             </div>
             <div class="container-2_plate">
                 <p class="title">Харків</p>
                 <p>Регіональний представник у Північно-східному регіоні.</p>
                     <p>тел.: (+38)066 727 29 54</p>
-                    <p>mail: xxxxxxxx@gmail.com</p>
+                    <p>mail: kharkivdent@alpenpharma.com</p>
             </div>
             <div class="container-2_plate">
                 <p class="title">Одеса</p>
                 <p>Регіональний представник у Південному регіоні</p> 
                     <p>тел.: (+38)000 000 00 00</p>
-                    <p>mail: xxxxxxxx@gmail.com</p>
+                    <p>mail: odesadent@alpenpharma.com</p>
             </div>
             <div class="container-2_plate">
                 <p class="title">Дніпро</p>
                 <p>Регіональний представник у Південно-східному регіоні</p>
                     <p>тел.: (+38)000 000 00 00</p>
-                    <p>mail: xxxxxxxx@gmail.com</p>
+                    <p>mail: dniprodent@alpenpharma.com</p>
             </div>
         </div>
     </div>
