--- a/Arcona-dent/index-1.html
+++ b/Arcona-dent/index-1.html
@@ -164,9 +164,9 @@
         <div class="product-body_right">
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
             <h3>КОМПОЗИТ-ВОЛОКНО</h3>
-            <div class="product-body_right-btn">
+            <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
-            </div>
+            </a>
             <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
             </a>
@@ -452,7 +452,9 @@
 <!--//////////slider-mob-->
 
     
-
+<div class="puppet">
+    <a name="wbue"></a>
+</div>
 
 <div class="container-2">
     <div class="container_inner">
