--- a/Arcona-dent/index-14.html
+++ b/Arcona-dent/index-14.html
@@ -165,9 +165,9 @@
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
             <h3>MUSON</h3>
             <p class="pre-text">Шипучі водорозчинні таблетки</p>
-            <div class="product-body_right-btn">
+            <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
-            </div>
+            </a>
             <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
             </a>
@@ -454,7 +454,9 @@
 <!--//////////slider-mob-->
 
     
-
+<div class="puppet">
+    <a name="wbue"></a>
+</div>
 
 <div class="container-2">
     <div class="container_inner">
