--- a/Arcona-dent/index-3.html
+++ b/Arcona-dent/index-3.html
@@ -165,9 +165,9 @@
             <p class="product-body_right-top-text">Пломбувальні матеріали</p>
             <h3>FLOW-COLOR</h3>
             <p class="pre-text">Кольоровий наногібридний композит типу FLOW</p>
-            <div class="product-body_right-btn">
+            <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
-            </div>
+            </a>
             <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
             </a>
@@ -457,7 +457,9 @@ FLOW-COLOR повстав з думкою про наймолодших паці
 <!--//////////slider-mob-->
 
     
-
+<div class="puppet">
+    <a name="wbue"></a>
+</div>
 
 <div class="container-2">
     <div class="container_inner">
