--- a/Arcona-dent/index-5.html
+++ b/Arcona-dent/index-5.html
@@ -165,9 +165,9 @@
             <p class="product-body_right-top-text">Допоміжні матеріали</p>
             <h3>PAROSIN</h3>
             <p class="pre-text">Набір для промивання ясенних кишень</p>
-            <div class="product-body_right-btn">
+            <a href="#wbue" class="product-body_right-btn">
                 <p>Де придбати</p>
-            </div>
+            </a>
             <a href="#form" class="product-body_left-btn product-body_left-btn-mob">
                 <p>Замовити персональну презентацію</p>
             </a>
@@ -457,7 +457,9 @@
 
 <!--//////////slider-mob-->
 
-    
+<div class="puppet">
+    <a name="wbue"></a>
+</div>
 
 
 <div class="container-2">
