--- a/Arcona-dent/index.html
+++ b/Arcona-dent/index.html
@@ -108,9 +108,9 @@
             <div class="production_plate-img"></div>
             <p class="title">Muson</p>
         </a>
-        <!-- <div class="production_plate">
+        <div class="production_plate production_plate-submenu">
         </div>
-        <div class="production_plate">
+        <!-- <div class="production_plate">
         </div> -->
     </div>
 </div>
