--- a/Arcona-dent/index-1.html
+++ b/Arcona-dent/index-1.html
@@ -111,7 +111,7 @@
         <div class="production_plate production_plate-submenu">
         </div>
         <div class="production_plate">
-        </div> -->
+        </div>
     </div>
 </div>
 
